--- a/backend/package.json
+++ b/backend/package.json
@@ -7,11 +7,7 @@
     "test": "jest --config jest.config.js --silent src/__tests__/",
     "local": "npx tsc --watch & nodemon dist/index.js",
     "build": "tsc -p .",
-    "docker-dev": "docker-compose -f docker-compose.dev.yml up -d",
-    "docker-down": "docker-compose down",
-    "docker-local": "docker-compose -f docker-compose.local.yml up -d",
-    "docker-local-new-build": "docker-compose -f docker-compose.local.yml up -d --build",
-    "docker-prod": "docker-compose -f docker-compose.prod.yml up -d",
+    "deploy": "./auto_deploy.sh",
     "fetch-kita-details": "ts-node src/scripts/iterateOverKitas.ts"
   },
   "author": "",
@@ -19,6 +15,7 @@
   "dependencies": {
     "@types/uuid": "^9.0.1",
     "airtable": "^0.11.6",
+    "amqplib": "^0.10.3",
     "axios": "^1.3.4",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
@@ -32,6 +29,7 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/hpp": "^0.2.2",
